tests/ui/const-generics/invalid-const-arg-for-type-param.stderr
error[E0107]: method takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/invalid-const-arg-for-type-param.rs:6:23
   |
LL |     let _: u32 = 5i32.try_into::<32>().unwrap();
   |                       ^^^^^^^^ expected 0 generic arguments
   |
help: consider moving this generic argument to the `TryInto` trait, which takes up to 1 argument
   |
LL -     let _: u32 = 5i32.try_into::<32>().unwrap();
LL +     let _: u32 = TryInto::<32>::try_into(5i32).unwrap();
   |
help: remove the unnecessary generics
   |
LL -     let _: u32 = 5i32.try_into::<32>().unwrap();
LL +     let _: u32 = 5i32.try_into().unwrap();
   |

error[E0599]: no method named `f` found for struct `S` in the current scope
  --> $DIR/invalid-const-arg-for-type-param.rs:9:7
   |
LL | struct S;
   | -------- method `f` not found for this struct
...
LL |     S.f::<0>();
   |       ^ method not found in `S`

error[E0107]: struct takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/invalid-const-arg-for-type-param.rs:12:5
   |
LL |     S::<0>;
   |     ^----- help: remove the unnecessary generics
   |     |
   |     expected 0 generic arguments
   |
note: struct defined here, with 0 generic parameters
  --> $DIR/invalid-const-arg-for-type-param.rs:3:8
   |
LL | struct S;
   |        ^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0107, E0599.
For more information about an error, try `rustc --explain E0107`.
